--- a/week-1/project_setup/story_map.html
+++ b/week-1/project_setup/story_map.html
@@ -22,19 +22,21 @@
   <div class="flex-grid">
     <div class="col change-1">
       <h3>User Story</h3>
-      Begin work on evuntual completion on AFS-220 Capstone
+      <p>Begin work on evuntual completion on AFS-220 Capstone</p>
     </div>
     <div class="col change-1">
       <h3>User Story</h3>
-      Decide what features to include
+      <p>Decide what features to include</p>
+      <hr>
+      <p>Make some edits to new feature requirements</p>
     </div>
     <div class="col change-1">
       <h3>User Story</h3>
-      Begin work on starting layout.
+      <p>Begin work on starting layout.</p>
     </div>
     <div class="col change-1">
       <h3>User Story</h3>
-      Refine layout with feedback from instructor of AFS-220 class.
+      <p>Refine layout with feedback from instructor of AFS-220 class.</p>
     </div>
   </div>
 
